TransitManager: Remove Favourites
We don't plan on using these
