# CorvallisBus.Core/Models/FavoriteStop.cs
@@ -1,16 +1,0 @@
-﻿using System;
-using System.Collections.Generic;
-using System.Linq;
-using System.Threading.Tasks;
-
-namespace CorvallisBus.Core.Models
-{
-    public record FavoriteStop(
-        int Id,
-        string Name,
-        List<string> RouteNames,
-        double Lat,
-        double Long,
-        double DistanceFromUser,
-        bool IsNearestStop);
-}
